--- a/delete.html
+++ b/delete.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Delete Product</title>
 </head>
 <body>
-    <button onclick="onDelete()">Create</button>
+    <button class="btn btn-success" onclick="onDelete()">Delete</button>
 
 
 
@@ -16,27 +17,10 @@
     <script>
 
         async function onDelete(){
-            let url = "https://crud.teamrabbil.com/api/v1/CreateProduct";
-            const myHeaders = new Headers();
-            myHeaders.append("Content-Type", "application/json");
-
-            let rawData = {
-                "ProductName": "OrangeLemon",
-                "ProductCode": "OrangeType", 
-                "Img": "aaa1234", 
-                "UnitPrice": "180", 
-                "Qty": "42", 
-                "TotalPrice": "1800"
-            }
-
-            let reqDetails = {
-                method: "POST",
-                headers: myHeaders,
-                body: JSON.stringify(rawData),
-
-            }
-
-            let data = await fetch(url, reqDetails);
+            let id = "666f1773c0df96138d5fb8d1";
+            let url = "https://crud.teamrabbil.com/api/v1/DeleteProduct/"+id;
+      
+            let data = await fetch(url);
             let JsonData = await data.json();
 
             console.log(JsonData)
