--- a/update.html
+++ b/update.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CreateProduct</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Update Product</title>
 </head>
 <body>
-    <button onclick="onRead()">Create</button>
+    <button class="btn btn-success" onclick="onUpdate()">Update</button>
 
 
 
@@ -15,21 +16,21 @@
 
     <script>
 
-        // Create product
-
-        async function onRead(){
-            let url = "https://crud.teamrabbil.com/api/v1/CreateProduct";
+        async function onUpdate(){
+            let id = "667184b1c0df96138d5fcabd";
+            let url = "https://crud.teamrabbil.com/api/v1/CreateProduct"+id;
             const myHeaders = new Headers();
             myHeaders.append("Content-Type", "application/json");
 
             let rawData = {
-                "ProductName": "OrangeLemon45682",
-                "ProductCode": "OrangeTypekliii", 
-                "Img": "aaa1234", 
+                "ProductName": "acabad45612",
+                "ProductCode": "OrangeType456", 
+                "Img": "aaa12345", 
                 "UnitPrice": "180", 
                 "Qty": "42", 
                 "TotalPrice": "1800"
             }
+
 
             let reqDetails = {
                 method: "POST",
@@ -42,6 +43,7 @@
             let JsonData = await data.json();
 
             console.log(JsonData)
+
         }
 
 
